[WGSL] texture_external as a global generates incorrect indices https://bugs.webkit.org/show_bug.cgi?id=263564 rdar://117379167

Reviewed by Mike Wyrzykowski.

The generated auto layout shouldn't use the user-provided @binding values directly,
but instead generate new binding IDs. This solves the problem for texture_external
as well as generates contiguous IDs. The code can be simplified further, but for
now it exposes extra information for the API about the offsets of the bufferSize
special entries, while keeping the current behavior working. Once we update the API
we can simplify the code without breaking anything.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::determineUsedGlobals):
(WGSL::RewriteGlobalVariables::insertStructs):
* Source/WebGPU/WGSL/tests/valid/texture-external.wgsl: Added.

(WGSL::RewriteGlobalVariables::insertStructs):
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::Device::createBindGroupLayout):
* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::addPipelineLayouts):
(WebGPU::Device::generatePipelineLayout):
Update BindGroupLayout generation to match the compiler change.

Canonical link: https://commits.webkit.org/269996@main